compiler/fir/analysis-tests/testData/resolve/topLevelDestruction.kt
konst <!SYNTAX!>(x, y)<!> = Pair(1, 2)
